objects/Campsite_Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Campsite__c</fullName>
        <label>Campsite</label>
        <referenceTo>Campsite__c</referenceTo>
        <relationshipLabel>Campsite Reservation</relationshipLabel>
        <relationshipName>Campsite_Reservation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campsite_Reservation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campsite Reservation</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Campsite Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campsite Reservation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>